--- a/tigamap/templates/tigamap/validated_report_map_filterable.html
+++ b/tigamap/templates/tigamap/validated_report_map_filterable.html
@@ -456,7 +456,7 @@ function map_init_basic(map, options) {
     }
 
     var increment = 50;
-            for (var id = 0; id <= {{ last_id }}; id += increment) {
+            for (var id = 0; id <=500; id += increment) {
                 get_data(id, id + (increment - 1), map);
             }
 
